# EStokTP

./: .gitignore  CMakeLists.txt  README.md  build.sh  environment.yml  meta.yaml
.circleci/: config.yml
debug/: build.sh  fake-install.sh
exe/: abs_wrapper.com  add_wrapper.com  assemble_multi.com  assemble_var.com  configure  run_estoktp.com  run_estoktp_example.com  run_estoktpb.com
sources/estoktp_1.8_distrib/: LineRead2.f  dihedral.c  estoktp.f  g09fopt.f  mt.c  zmat_routines.f
sources/projRot_1.0_distr/: Makefile  invert_matrix3.c  main.c
src/estoktp/: LineRead.f  LineRead2.f  LineRead3.f  croutines.c  data_estoktp.fi  estoktp.f  filcomm.f  g09fopt.f  makefile  molprofopt.f  param_estoktp.fi  tsbuild.f  zmat_routines.f
src/estoktp_1.10/: g09fopt.f  makefile  molprofopt.f  tsbuild.f
src/projRot/: RPHt.h  invert_matrix3.c  main.c  main_saveTShalf.c
